--- a/styles.css
+++ b/styles.css
@@ -100,11 +100,6 @@ body {
 .fi-icon-top img {
     width: 100%;
 }
-
-.fi-icon-top:hover {
-    top: -7px;
-    left: -7px;
-}
 .fi-icon-top:active {
     top: -3px;
     left: -3px;
@@ -239,10 +234,6 @@ div#projects {
     width: 100%;
 }
 
-.pro-link-top:hover {
-    top: -7px;
-    left: -7px;
-}
 .pro-link-top:active {
     top: -3px;
     left: -3px;
@@ -299,5 +290,159 @@ div#projects {
     box-shadow: 3px 3px #000;
     padding: 10px;
     background-color: #f4b6eb;
+}
+
+.phone-info {
+    display: none;
+}
+
+.phone-timeline {
+    display: none;
+}
+
+::-webkit-scrollbar {
+    width: 7px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #dff3d4;
+    border-radius: 10px;
+    margin: 5px 0;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #95d471;
+    border-radius: 10px;
+    margin: 5px 0;
+}
+
+@media screen and (max-width: 1200px) {
+    .main {
+        box-shadow: none;
+        margin: 0;
+        width: 100%;
+        height: auto;
+    }
+    .float-info {
+        display: none;
+    }
+
+    .scroll-info {
+        width: 100%;
+    }
+
+    .phone-info {
+        display: block;
+        background: #95d471;
+        margin: 0 -64px;
+        padding: 64px;
+    }
+
+    .phone-info-footer {
+        margin-top: 30px;
+    }
+
+    .fi-icons {
+        margin-top: 20px;
+    }
+
+    .pro-img {
+        max-width: 500px;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .scroll-info {
+        padding: 0 32px 32px 32px;
+    }
+
+    .phone-info {
+        display: block;
+        background: #95d471;
+        margin: 0 -32px;
+        padding: 64px 32px;
+    }
+
+    .fname {
+        font-size: 24px;
+    }
+
+    .designation {
+        font-size: 16px;
+    }
+
+    .find-me-on {
+        font-size: 14px;
+    }
+
+    .exp-timeline {
+        display: none;
+    }
+
+    .exp-txt {
+        width: 100%;
+    }
+
+    .phone-timeline {
+        display: flex;
+        align-items: center;
+        gap: 15px;
+        margin-top: 15px;
+        font-style: italic;
+    }
+
+    .pro-skills {
+        flex-wrap: wrap;
+    }
+
+    .skill-block {
+        font-size: 12px;
+    }
+
+    .fi-icon {
+        width: 40px;
+        height: 40px;
+    }
+    
+    .fi-icon-top {
+        width: 40px;
+        height: 40px;
+        padding: 10px;
+    }
+
+    .pro-title {
+        font-size: 20px;
+    }
+    .pro-link {
+        width: 40px;
+        height: 40px;
+    }
+    
+    .pro-link-top {
+        width: 40px;
+        height: 40px;
+        padding: 10px;
+    }
+
+
+}
+
+@media (hover: hover), (-ms-high-contrast:none) {
+    .fi-icon-top:hover {
+        top: -7px;
+        left: -7px;
+    }
+    .fi-icon-top:active {
+        top: -3px;
+        left: -3px;
+    }
+    .pro-link-top:hover {
+        top: -7px;
+        left: -7px;
+    }
+    .pro-link-top:active {
+        top: -3px;
+        left: -3px;
+    }
 }
 
